refactor: :recycle: updated dependencies inyection from autowired to constructor injection using @RequiredArgsConstructor annotation